@@ -43,7 +43,7 @@ stationary.momentuHMM <- function(model, covs, covIndex = NULL)
         stop("No state probabilities (1-state model).")
 
     formula<-model$conditions$formula
-    newForm <- newFormulas(formula,nbStates,hierarchical=TRUE)
+    newForm <- newFormulas(formula,nbStates,model$conditions$betaRef,hierarchical=TRUE)
     newformula <- newForm$newformula
     recharge <- newForm$recharge
     
@@ -77,7 +77,7 @@ stationary.momentuHMM <- function(model, covs, covIndex = NULL)
     }
     
     if(!is.null(recharge)){
-      reForm <- formatRecharge(nbStates,formula,data=model$data,par=list(g0=model$mle$g0,theta=model$mle$theta))
+      reForm <- formatRecharge(nbStates,formula,model$conditions$betaRef,data=model$data,par=list(g0=model$mle$g0,theta=model$mle$theta))
       newformula <- reForm$newformula
       recharge <- reForm$recharge
       hierRecharge <- reForm$hierRecharge
