@@ -40,7 +40,7 @@ viterbi <- function(m, hierarchical=FALSE)
     stop("No states to decode (nbStates=1)")
   
   # identify covariates
-  reForm <- formatRecharge(nbStates,m$conditions$formula,m$data,par=m$mle)
+  reForm <- formatRecharge(nbStates,m$conditions$formula,m$conditions$betaRef,m$data,par=m$mle)
   covs <- reForm$covs
   aInd <- reForm$aInd
   
