@@ -1,10 +1,14 @@
-momentuHMM 1.5.1 2020-02-18
+momentuHMM 1.5.1 2020-03-02
 -----------------
 CHANGES
 
 * stationary argument in fitHMM and MIfitHMM can now be set to TRUE when 'ID' is the only covariate included in formula; in this case the initial distribution is calculated independently for each individual
 
 * in prepData, data streams can now be named 'step' and/or 'angle' when coordNames=NULL
+
+BUG FIXES
+
+* 'toState' special formula did not account for non-default values in 'betaRef' argument
 
 
 momentuHMM 1.5.0 2019-12-17
